# Adafruit_CircuitPython_ADS1x15

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  README.md  README.rst  api.rst  conf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
adafruit_ads1x15/: __init__.py  adafruit_ads1x15.mpy  adafruit_ads1x15.py  ads1015.py  ads1115.py  ads1x15.py  analog_in.py  differential.mpy  differential.py  single_ended.mpy  single_ended.py
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: ads1015_simpletest.py  ads1115_differential.py  ads1115_single_ended.py  ads1115_single_ended_simpletest.py  ads1x15_ads1115_simpletest.py  ads1x15_comparator_example.py  ads1x15_fast_read.py  ads1x15_gain_example.py  ads1x15_simpletest.py
